deployment/k8s-barkoder-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: barkoder-web
  labels:
    maintainer: maslick
    project: barkoder
    app: barkoder-web
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    maintainer: maslick
    project: barkoder
    app: barkoder-web
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: barkoder-web
spec:
  replicas: 1
  template:
    metadata:
      name: barkoder-web
      labels:
        maintainer: maslick
        project: barkoder
        app: barkoder-web
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: cloud.google.com/gke-preemptible
                    operator: Exists
              weight: 100
      containers:
        - image: maslick/barkoder-ui
          imagePullPolicy: Always
          name: barkoder-web
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 1Gi
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
