deployment/k8s-barkoder-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: barkoder-ingress
  labels:
    project: barkoder
  annotations:
    kubernetes.io/tls-acme: “true”
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: koder-api.maslick.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: barkoder-api
              servicePort: 80
    - host: koder.maslick.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: barkoder-web
              servicePort: 80
          - path: /welcome
            backend:
              serviceName: barkoder-web
              servicePort: 80
  tls:
    - secretName: tls-prod-cert
      hosts:
        - 'koder-api.maslick.ru'
        - 'koder.maslick.ru'
